--- a/src/components/contact-detail-card/ContactDetailCard.scss
+++ b/src/components/contact-detail-card/ContactDetailCard.scss
@@ -1,9 +1,41 @@
 .contact-detail-card {
   @apply absolute w-screen h-[calc(100%-50px)] md:w-[calc(100%-200px)];
   @apply grid place-content-center;
-  @apply bg-red-200;
+  @apply backdrop-blur-md;
 
   &__content {
-    @apply px-5 w-screen md:w-full;
+    @apply px-5 p-5 w-screen md:max-w-screen-sm flex flex-col;
+    @apply bg-white h-[calc(100vh-50px)] md:h-fit bg-opacity-80 md:bg-opacity-60;
+    @apply border-primary md:border md:rounded-xl;
+  }
+  &__exit-button {
+    @apply text-primary hover:text-secondary w-24 flex-col items-center -ml-5;
+  }
+  &__temp-display {
+    @apply mx-auto;
+  }
+  &__temp-gauge {
+    @apply mx-auto relative z-10 top-52 -mt-52 opacity-60;
+  }
+  &__avatar {
+    @apply mb-5 w-1/2 mx-auto relative z-50;
+  }
+  &__heading {
+    @apply text-center mb-5;
+  }
+  &__full-name {
+    @apply font-bold text-4xl text-boldText;
+  }
+  &__job-title {
+    @apply text-lg text-zinc-400;
+  }
+  &__contact-list {
+    @apply text-boldText flex mx-auto mb-4 bg-zinc-50 p-2 rounded-lg;
+  }
+  &__contact-item {
+    @apply flex px-5 py-1;
+  }
+  &__contact-item--text {
+    @apply ml-2 text-zinc-600;
   }
 }
