adjusted css for iphone use, cleaned up more code

--- a/src/app/dashboard/@contacts/contacts-page.scss
+++ b/src/app/dashboard/@contacts/contacts-page.scss
@@ -1,4 +1,7 @@
 .contacts-page {
-    @apply mt-[50px] h-screen overflow-scroll;
-    height: calc(100vh - 50px);
+  @apply pt-[50px] h-screen overflow-scroll pb-32;
+
+  &__search-bar {
+    @apply mx-auto;
+  }
 }
