--- a/src/components/nav-bar/NavBar.scss
+++ b/src/components/nav-bar/NavBar.scss
@@ -1,7 +1,8 @@
-.navbar{
-    @apply absolute z-10 border-b border-primary w-screen;
-    
-    &__logo-image{
-        @apply mx-auto cursor-pointer;
-    }
+.navbar {
+  @apply absolute z-10 border-b border-primary w-screen;
+  @apply bg-white;
+
+  &__logo-image {
+    @apply mx-auto cursor-pointer;
+  }
 }
