--- a/src/components/nav-bar/NavBar.scss
+++ b/src/components/nav-bar/NavBar.scss
@@ -1,8 +1,15 @@
 .navbar {
-  @apply absolute z-10 border-b border-primary w-screen;
-  @apply bg-white;
+  @apply absolute z-10 border-b border-extraLightText w-screen h-[50px];
+  @apply bg-white flex justify-between px-3 md:px-10 items-center;
 
   &__logo-image {
     @apply mx-auto cursor-pointer;
+  }
+  &__input {
+    @apply text-xs pl-2 h-8 w-1/2;
+    @apply border rounded-md;
+  }
+  &__avatar {
+    @apply w-10 border rounded-full;
   }
 }
