--- a/src/components/contact-detail-card/ContactDetailCard.scss
+++ b/src/components/contact-detail-card/ContactDetailCard.scss
@@ -1,46 +1,68 @@
 .contact-detail-card {
-  @apply absolute z-50 w-screen h-[calc(100vh-50px)] md:w-[calc(100%-200px)];
+  @apply absolute z-50 w-screen h-[calc(100vh-50px)] md:w-[calc(100vw-120px)];
   @apply grid place-content-center;
   @apply backdrop-blur-md;
 
   &__content {
-    @apply w-screen h-[calc(100vh-50px)]  md:w-[450px] md:h-[700px]  flex flex-col;
-    @apply md:px-5 md:p-5 pb-28 md:pb-0;
-    @apply bg-white  bg-opacity-70 md:bg-opacity-60;
-    @apply border-primary md:border md:rounded-xl;
+    @apply md:relative w-screen h-[calc(100vh-50px)] md:w-[575px] md:h-[750px];
+    @apply flex flex-col justify-center;
+    @apply bg-white bg-opacity-70 md:bg-opacity-90;
+    @apply md:rounded-xl;
+    @apply shadow-lg;
   }
+
   &__exit-button {
-    @apply relative top-5 w-24 flex-col items-center -ml-5;
-    @apply text-primary hover:text-secondary;
+    @apply absolute z-50 text-headerText hover:text-secondary;
+    @apply top-6 right-6 m-3;
+    @apply md:top-5 md:right-5 md:m-3;
   }
+
+  &__temp-guage-container {
+    @apply md:flex md:flex-row-reverse absolute md:top-10 top-5 left-0 right-0;
+  }
+
   &__temp-display {
-    @apply mx-auto relative -mt-12 md:-mt-10;
+    @apply mx-auto relative md:top-10 md:right-5;
   }
+
   &__temp-gauge {
-    @apply mx-auto min-w-52 relative z-10 top-60 -mt-72 opacity-60;
+    @apply mx-auto z-10 relative -top-[70px] md:-top-0 opacity-60;
   }
+
   &__avatar {
-    @apply mb-5 w-[150px] md:w-[200px] mx-auto relative z-50;
+    @apply w-[200px] md:w-[175px] z-50 mb-5 mx-auto md:mx-0 absolute left-0 right-0 top-[220px];
+    @apply md:top-[100px] md:left-[80px];
   }
+
+  &__heading-container {
+    @apply flex flex-col md:flex-row items-center text-center md:text-left;
+    @apply absolute left-0 right-0 top-[450px] md:top-[300px];
+  }
+
   &__heading {
-    @apply text-center mb-3 md:mb-5;
+    @apply mx-auto;
   }
+
   &__full-name {
-    @apply font-bold text-4xl text-boldText;
+    @apply font-bold text-3xl text-boldText;
   }
+
   &__job-title {
-    @apply text-lg text-zinc-400;
+    @apply text-lg text-zinc-400 mb-3;
   }
-  &__contact-list {
-    @apply text-boldText flex-row sm:flex mx-auto mb-4  p-2 rounded-lg;
+
+  &__social-icon-container {
+    @apply flex mx-auto text-boldText space-x-3;
   }
-  &__contact-item {
-    @apply flex px-5 py-1;
+
+  &__social-icon {
+    @apply rounded-full bg-primary h-fit p-1 cursor-pointer hover:bg-secondary;
   }
-  &__contact-item--icon {
-    @apply text-primary;
+
+  &__social-icon--icon {
+    @apply text-white;
   }
-  &__contact-item--text {
-    @apply ml-2 text-zinc-600;
+  &__scroll-section {
+    @apply absolute top-[560px] md:top-[400px];
   }
 }
