optimized for iPhone

--- a/src/app/dashboard/@contacts/contacts-page.scss
+++ b/src/app/dashboard/@contacts/contacts-page.scss
@@ -1,6 +1,6 @@
 .contacts-page {
   @apply h-screen w-screen;
-  @apply pt-[50px];
+  @apply pt-[50px] pb-[100px];
   @apply overflow-scroll;
   @apply animate-fadeIn;
 
