--- a/src/components/contact-detail-card/ContactDetailCard.scss
+++ b/src/components/contact-detail-card/ContactDetailCard.scss
@@ -1,4 +1,3 @@
-// src/components/contact-detail-card/ContactDetailCard.scss
 .contact-detail-card {
   @apply absolute z-50 w-screen h-[calc(100vh-50px)] md:w-[calc(100vw-134px)];
   @apply grid place-content-center;
@@ -30,7 +29,7 @@
   }
 
   &__temp-gauge {
-    @apply mx-auto z-10 relative -top-[70px] md:-top-0 opacity-60;
+    @apply mx-auto z-10 relative -top-[70px] md:top-5 opacity-60;
   }
 
   &__avatar {
