--- a/src/app/dashboard/dashboard-loading.scss
+++ b/src/app/dashboard/dashboard-loading.scss
@@ -4,4 +4,7 @@
   &__loading-icon {
     @apply animate-spin text-extraLightText;
   }
+  &__loading-text {
+    @apply text-lightText animate-pulse text-center text-xs;
+  }
 }
