--- a/src/app/dashboard/@contacts/contact-loading.scss
+++ b/src/app/dashboard/@contacts/contact-loading.scss
@@ -1,7 +1,10 @@
 .contact-loading-page {
-  @apply grid place-content-center;
+  @apply grid items-center place-content-center h-screen w-full;
 
   &__loading-icon {
-    @apply animate-spin;
+    @apply animate-spin text-extraLightText;
+  }
+  &__loading-text {
+    @apply text-lightText animate-pulse text-center;
   }
 }
